[package]
name = "obniz-rust"
version = "0.1.0"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
url = "2.2.2"
async-std = "1.12.0"
tungstenite = {version="0.17.2",features=["native-tls"]}
async-tungstenite = {version = "*" , features = ["async-std-runtime"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
