[package]
name = "obniz-rust"
version = "0.1.0"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
url = "2.2.2"
tokio =  { version = "1.27.0", features = ["full"] }
tungstenite = {version="0.19.0",features=["native-tls"]}
tokio-tungstenite = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
